k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tasker-api
  namespace: tasker

spec:
  selector:
    app: tasker-api

  ports:
    - port: 8080
      targetPort: 8080

  type: ClusterIP
