k8s/api-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: tasker-api
  namespace: tasker

spec:
  entryPoints:
    - web

  routes:
    - match: Host(`tasker.local`)
      kind: Rule

      services:
        - name: tasker-api
          port: 8080
